# Research-Paper-RAG-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dev.bat  nginx.conf  pyproject.toml  requirements.txt  supervisord.conf
backend/: main.py
backend/core/: config.py  exceptions.py  logging.py
backend/crud/: checkpoint.py  request_log.py  uploaded_doc.py
backend/data/: init_db.py  mongodb_client.py
backend/models/: request_log.py  uploaded_doc.py
backend/rag/: llm_client.py
backend/rag/embedding/: embedder.py
backend/rag/ingestion/: chunker.py  cleaner.py  indexer.py  parser.py
backend/rag/langgraph/: __init__.py  graph.py  state.py
backend/rag/langgraph/nodes/: __init__.py  citation.py  generator.py  grade_docs.py  live_fetch.py  retrieve.py  router.py
backend/rag/vectorstore/: chroma_client.py  vector_schema.py
backend/routes/: chat.py  checkpoints.py  health.py  papers.py  upload.py
backend/schemas/: chat_schema.py  checkpoint_schema.py  paper_schema.py  rag_schema.py  upload_schema.py
backend/services/: chat_service.py  checkpoint_service.py  ingestion_service.py  paper_fetch_service.py  upload_service.py
backend/utils/: file_storage.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: app.py
frontend/pages/: viewer.py
tests/: conftest.py  test_chat_api.py  test_health.py  test_papers_api.py  test_upload_api.py
tests/integration/: test_ingestion_pipeline.py  test_smoke.py
tests/unit/: test_chunker.py  test_cleaner.py  test_file_storage.py
